--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -4,7 +4,7 @@
 <html lang="fr">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %}{% endblock %} - ma-cantine.beta.gouv.fr</title>
+        <title>{% block title %}{% endblock %} - ma-cantine.agriculture.gouv.fr</title>
         <link rel="stylesheet" href="{% static 'css/auth.css' %}">
 
         <link rel="icon" type="image/png" href="{% static 'images/favicon-marianne.png' %}">
