--- a/web/templates/auth/login.html
+++ b/web/templates/auth/login.html
@@ -56,7 +56,7 @@
             </div>
         </div>
     </form>
-    <a href="{% url 'register' %}"><button>Créer mon compte</button></a>
+    <a href="{% url 'register' %}" class="secondary-button">Créer mon compte</a>
     <hr style="margin-top: 22px;" />
     <p style="font-size: 0.85em; margin-top: 20px;"><a href="{% url 'password_reset' %}">J'ai perdu mon mot de passe</a></p>
     <p style="font-size: 0.85em; margin-top: 20px;"><a href="{% url 'magicauth-login' %}">Recevoir un lien de connexion par email</a></p>
