--- a/web/templates/auth/register.html
+++ b/web/templates/auth/register.html
@@ -32,6 +32,12 @@
                 <label for="{{form.number_of_managed_cantines.id_for_label}}">Combien d'établissements gérez-vous ?</label>
                 {{ form.number_of_managed_cantines }}
             </p>
+            <p>
+                {{ form.is_dev }}<label for="{{form.is_dev.id_for_label}}">Je suis une développeuse ou un développeur logiciel et j'ai besoin d'accéder aux APIs</label>
+            </p>
+        </div>
+        <div>
+
         </div>
         <hr />
 
