--- a/api/templates/teledeclaration_pdf.html
+++ b/api/templates/teledeclaration_pdf.html
@@ -57,7 +57,7 @@
         </div>
         <h1>Justificatif pour télédéclaration {{ year }}</h1>
         <h2>Cantine {{ canteen_name }} (SIRET {{ siret }})</h2>
-        <h3>Télédéclaration faite le {{ date|date:"l m F Y" }} par {{ applicant }}</h3>
+        <h3>Télédéclaration faite le {{ date|date:"l j F Y" }} par {{ applicant }}</h3>
         <h3>
             Vous avez choisi la télédéclaration {{ diagnostic_type }}.
         </h3>
@@ -69,7 +69,7 @@
         </p>
         <p>
             Pour l'année {{ year }}, les données suivantes ont été télédéclarées le
-            {{ date|date:"l m F Y" }} via la plateforme numérique ma cantine :
+            {{ date|date:"l j F Y" }} via la plateforme numérique ma cantine :
         </p>
         <!-- SIMPLIFIED DECLARATION -->
         {% if not diagnostic_type == "complète" %}
