Adds environment variable and web template

--- a/web/templates/vue-app.html
+++ b/web/templates/vue-app.html
@@ -37,6 +37,7 @@
         window.ENABLE_XP_RESERVATION = "{% enable_xp_reservation %}" === "True"
         window.ENABLE_XP_VEGE = "{% enable_xp_vege %}" === "True"
         window.ENABLE_PARTNERS = "{% enable_partners %}" === "True"
+        window.ENABLE_TELEDECLARATION = "{% enable_teledeclaration %}" === "True"
     </script>
 
     <script type="text/javascript">
