Use link to prefill manager email for adding

--- a/api/templates/canteen_join_request.html
+++ b/api/templates/canteen_join_request.html
@@ -11,7 +11,7 @@
         <p>-------------------------------------</p>
     {% endif %}
 
-    <p>Pour ajouter {{ name }} dans votre équipe, il suffit de renseigner son email ({{email}}) dans la page ci-dessous :</p>
+    <p>Pour ajouter {{ name }} dans votre équipe, il suffit de valider le formulaire dans la page ci-dessous :</p>
 
     <div class="cta">
         <a href="{{ url }}">
